Fix content shifting scrollbar again

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,7 +14,8 @@ html {
     -webkit-tap-highlight-color: transparent;
     // Disable the long press pop up on ios
     -webkit-touch-callout: none;
-    scrollbar-gutter: stable;
+    scrollbar-gutter: stable both-edges;
+    overflow-y: scroll;
 
 //     @include m.mobile {
 //         font-size: 14px;
